[package]
name = "random_service"
version = "0.1.0"
authors = ["ghglavan <george.glavan27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.2"
hyper = "0.12"
rand = "0.5"
dotenv = "0.13"
clap = "2.32"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"